# Reinforcement-learning-based-trading-bot

./: LICENSE  README.md  basic.txt  ppo_trading_model.txt  pyproject.toml
.github/: codeowners  pull-request-template.md
database/: KO.csv  NASDAQ_NEW.csv  NASDAQ_TEST.csv  NASDAQ_TRAIN.csv  goup.csv
datasets/: KO.csv  TD.TO.csv
logs/: ppo_trading_model.txt
src/algorithms/: basic.py  deep_q.ipynb  dyna_q.py  function_approximation.py  ppo.py  q_with_function_approximation.py  sarsa.py  td_zero.py
src/algorithms/classes/: helper.py  linear_dyna_q_learner.py  linear_learner.py  linear_model.py  sarsa_linear_learner.py  state_featurizer.py
src/data/: __init__.py  _init_.py  utils.py
src/demo/: trading-demo.py  trading.py
src/demo/utils/: masking.py
src/enums/: __init__.py  action.py  reward.py
src/envs/: __init__.py  trading.py
src/models/: __init__.py  account.py  action.py
src/playground/: main.py
