[tool.poetry]
name = "4900rl"
version = "0.0.1"
description = ""
authors = [
    "Anthony Y. Zhu <anthonyzhu@cmail.carleton.ca>"
]
license = "MIT"
readme = "README.md"
packages = [
  {include = "data", from = "src"},
  {include = "algorithms", from = "src"},
  {include = "envs", from = "src"},
  {include = "enums", from = "src"},
  {include = "models", from = "src"}
]

[tool.poetry.scripts]
basic = "src.algorithms.basic:demo"
dyna_q = "src.algorithms.dyna_q:demo"
deep_q = "src.algorithms.deep_q:demo"
q_with_function_approximation = "src.algorithms.q_with_function_approximation:demo"
sarsa = "src.algorithms.sarsa:demo"
td_lambda = "src.algorithms.td_lambda:demo"
td_zero = "src.algorithms.td_zero:demo"
ppo = "src.algorithms.ppo:demo"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
gymnasium = "^0.29.1"
matplotlib = "^3.8.0"
pandas = "^1.5"
scikit-learn = "^1.3.2"
stable-baselines3 = {extras = ["extra"], version = "^2.2.1"}
sb3-contrib = "^2.2.1"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[tool.black]
line-length = 150

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
